--- a/src/test.html
+++ b/src/test.html
@@ -80,10 +80,10 @@
                     </div>
                 </div>
                 <div class="face left">
-                    <img src="/flash.87935804.gif">
+                    <img src="./images/flash.gif">
                 </div>
                 <div class="face right">
-                    <img src="/flash.87935804.gif">
+                    <img src="./images/flash.gif">
                 </div>
                 <div class="mouth">
                     <div class="up">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </div>
-        <script src="/test.ef8cfb9f.js"></script>
+        <script src="./test.js"></script>
     </body>
 
     </html>
